[package]
name = "oink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
clap = { version = "3.2.25", features = ["derive"] }
config = "0.11.0"
dialoguer = "0.11.0"
directories-next = "2.0.0"
image = "0.24.7"
indicatif = "0.17.7"
rand = "0.8.5"
rayon = "1.8.0"

serde = { version = "1.0.135", features = ["derive"] }
serde_json = { version = "1.0.78", features = ["preserve_order"] }
