[package]
name = "oink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.11.0"
image = "0.24.7"
indicatif = "0.17.7"
rand = "0.8.5"
rayon = "1.8.0"

serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
sha3 = "0.10.8"
